--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.ssunews.ongoni.ssunews"
+        applicationId "com.ongoni.csit.ssunews"
         minSdkVersion 22
         targetSdkVersion 24
         versionCode 1
